add another project

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,3 +2,7 @@
   link: http://trbmb.chew.pw
   github: https://github.com/chewsterchew/trbmb-gen
   description: A fun generator to generate silly phrases.
+- name: 'Ti-84 Programs'
+  link: http://ti84.chew.pw
+  github: https://github.com/chewsterchew/ti84-programs
+  description: Programs and games for your ti-84+CE Calculator!
