add irc links to projects

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -2,6 +2,7 @@
   link: http://trbmb.chew.pw
   github: https://github.com/chewsterchew/trbmb-gen
   description: A fun generator to generate silly phrases.
+  irc: https://chew.pro/irc/TRBMBGen
 - name: 'Ti-84 Programs'
   link: http://ti84.chew.pw
   github: https://github.com/chewsterchew/ti84-programs
@@ -15,5 +16,3 @@
   description: A simple Minecraft Mod (with no uses)
 - name: 'ChewPack'
   description: A work-in-progress Minecraft Modpack
-
-
