--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ description: "Chew's GitHub Projects."
 baseurl:
 url: http://chew.pro
 twitter_username: chewcraft
-github_username: chewsterchew
+github_username: chew
 accent: "#f7f7e6"
 author: Chew
 isolang: en
